--- a/themes/r4c/layouts/_default/baseof.html
+++ b/themes/r4c/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     {{- partial "head.html" . -}}
-    <body>
+    <body  class="sans-serif bg-osd ink ph2">
         {{- partial "header.html" . -}}
         <div id="content">
         {{- block "main" . }}{{- end }}
