--- a/themes/r4c/layouts/partials/head.html
+++ b/themes/r4c/layouts/partials/head.html
@@ -4,7 +4,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="{{ with .Site.Params.description }} {{ . }} {{ end }}">
 <meta name="author" content="{{ with .Site.Params.name }} {{ . }} {{ end }}">
+
 {{ .Hugo.Generator }}
 
+<!-- TWITTER CARDS -->
+<meta name="twitter:site" content="@osd_it">
+<meta name="twitter:creator" content="{{ with .Site.Params.name }} {{ . }} {{ end }}">
+{{ if .IsPage }}
+<meta name="twitter:description" content="{{ .Summary }}" />
+<meta name="twitter:title" content="{{ .Title }}" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="{{ .Params.image }}" /> {{ else }}
+<meta name="twitter:title" content="{{ .Site.Title }}" />
+<meta name="twitter:description" content="{{ with .Site.Params.description }} {{ . }} {{ end }}" /> {{ end }}
+
+<!-- STYLE -->
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/tachyons.min.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/r4c.css" />
