--- a/themes/r4c/layouts/index.html
+++ b/themes/r4c/layouts/index.html
@@ -1,5 +1,5 @@
 {{ partial "head.html" . }}
-  <h1>Title: Ready for commons</h1>
+  {{ partial "header.html" . }}
   content
 {{ partial "footer.html" . }}
 
