--- a/themes/r4c/layouts/partials/head.html
+++ b/themes/r4c/layouts/partials/head.html
@@ -19,8 +19,11 @@
 
     {{ partial "seo/og.html" . }}
 
-  </head>
-  <body>
 
-  </body>
-</html>
+
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/r4c-color.css">
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/r4c-link.css">
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/tachyons.min.css">
+
+  </head>
+  <body class="sans-serif bg-osd ink ph2">
