--- a/themes/r4c/layouts/partials/footer.html
+++ b/themes/r4c/layouts/partials/footer.html
@@ -1,3 +1,14 @@
-<footer>
-  <h1>This is the footer</h1>
+<footer class="ph3 ph4-ns pv6 bt b--black-10 black-70 avenir" id="footer">
+  <img src="img/logo/readyforcommons.svg" alt="ready for commons logo">
+  <a href="mailto:contact@sod.tools" class="link b f3 f2-ns dim black-70 lh-solid">contact@osd.tools</a>
+  <p class="f6 db b lh-solid osd-link">© 2018 Ready for commons</p>
+  <div class="mt5">
+    <a href="/terms/"    title="Terms" class="f6 dib ph2 mid-gray dim">Terms of Use</a>
+    <a href="/privacy/"  title="Privacy" class="f6 dib pl2 mid-gray dim">Privacy</a>
+  </div>
+  <div class="pa2 osd-link flex mt5 items-center">
+    powered by <img class="ph2 h2" src="img/logo/osd-logo.svg" alt="logo OSD">
+    <p><a class="osd-link" href="https://osd.tools">OSD opensensorsdata</a></p>
+
+  </div>
 </footer>
