--- a/themes/r4c/layouts/partials/header.html
+++ b/themes/r4c/layouts/partials/header.html
@@ -2,14 +2,14 @@
   <a href="/" class="">
     <img src="/img/logo/readyforcommons.svg" alt="ready for commons logo">
   </a>
-  <h1 class="mt2 mb0 baskerville i fw1 f1">{{ .Title}}</h1>
+  <h1 class="mt2 mb0 baskerville i fw1 f1">{{ .Site.Title}}</h1>
   <h2 class="mt2 mb0 f6 fw4 ttu tracked">{{ .Site.Params.payoff }}</h2>
   <p class="mt2 mb0 f7 fw4 tracked">{{ now.Format "Monday, January 2, 2006" }}</p>
-  <!--
+
   <nav class="bb b--osd-indigo tc w-100 center mt4">
     <a class="f6 f5-l link bg-animate ink hover-osd-pink dib pa3 ph4-l" href="/resources/">Resources</a>
-    <a class="f6 f5-l link bg-animate ink hover-osd-pink dib pa3 ph4-l" href="#about">About</a>
+    <a class="f6 f5-l link bg-animate ink hover-osd-pink dib pa3 ph4-l" href="/about">About</a>
     <a class="f6 f5-l link bg-animate ink hover-osd-pink dib pa3 ph4-l" href="#footer">Contact</a>
   </nav>
-  -->
+
 </header>
