--- a/themes/r4c/layouts/partials/footer.html
+++ b/themes/r4c/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="ph3 ph4-ns pv6 bt b--black-10 black-70 avenir">
+<footer class="ph3 ph4-ns pv6 bt b--black-10 black-70 avenir" id="footer">
   <img class="h2" src="{{ .Site.BaseURL }}img/logo/readyforcommons.svg" alt="ready for commons logo">
   <a href="mailto:contact@sod.tools" class="link b f3 f2-ns dim black-70 lh-solid">contact@osd.tools</a>
   <p class="mt3"> <span class="f6 db b ttu lh-solid">© 2018 Ready for commons</span> brought with &hearts; by <a class="dib pl2 mid-gray dim" href="https://osd.tools">OSD opensensorsdata</a></p>
